--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
+    "pnotify": "^5.2.0",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "animate.css": "^4.1.1",
+    "basiclightbox": "^5.0.4",
+    "pexels": "^1.3.0"
   }
 }
